--- a/pet-web/src/Stylesheets/Root.css
+++ b/pet-web/src/Stylesheets/Root.css
@@ -1,5 +1,17 @@
 :root {
-  --awake : rgba(255, 255, 255, 1);
+    --bgcolor: rgba(18, 14, 17, 0.924);
+    --navbg: rgba(244, 248, 248, 0.06);
+    --maincardcolor: rgba(255, 255, 255, 0.15);
+    --quotebg: rgba(0, 114, 114, 0.06);
+    --quotecolor: rgba(6, 255, 255, 1);
+    --cardcolor: rgba(244, 248, 248, 0.06);
+    --inactive: rgba(255, 255, 255, 0.67);
+    --primarytext: ;
+    --secondarytext: rgba(255, 255, 255, 1);
+    --tertiarytext: rgba(255, 255, 255, 0.68);
+    --svggradient: rgba(0, 138, 198, 1), rgba(0, 224, 255, 1), rgba(5, 85, 240, 1);
+    --dropshadows: 4px 7px 100px 0px rgba(3, 225, 255, 0.25);
+    --bordercolor: rgb(0, 255, 170);
 }
 
 *{
@@ -10,7 +22,7 @@
 }
 
 body{
-  background-color: black;
+   background-color: var(--bgcolor);
 }
 
 ::-webkit-scrollbar{
