--- a/pet-web/src/Stylesheets/Root.css
+++ b/pet-web/src/Stylesheets/Root.css
@@ -7,7 +7,7 @@
     --cardcolor: rgba(244, 248, 248, 0.06);
     --inactive: rgba(255, 255, 255, 0.67);
     --primarytext: ;
-    --secondarytext: rgba(255, 255, 255, 1);
+    --secondarytext: rgb(255, 255, 255);
     --tertiarytext: rgba(255, 255, 255, 0.68);
     --svggradient: rgba(0, 138, 198, 1), rgba(0, 224, 255, 1), rgba(5, 85, 240, 1);
     --dropshadows: 4px 7px 100px 0px rgba(3, 225, 255, 0.25);
