--- a/pet-web/src/Stylesheets/Abouts.module.css
+++ b/pet-web/src/Stylesheets/Abouts.module.css
@@ -19,7 +19,8 @@ h2{
 
 p{
     color: white;
-    margin: 0 5rem 5rem 5rem;
+    margin: 0 5rem 1rem 5rem; /* Adjust the bottom margin as needed */
+    
 }
 #whatWeDo {
     height: 140vh;
@@ -84,6 +85,7 @@ p{
     row-gap: 5px;
     overflow: hidden;
     transition: all 0.3s ;
+    margin: 0; 
 }
 .cards>div:hover{
     transform: scale(1.1);
