--- a/pet-web/src/Stylesheets/Rightdiv.module.css
+++ b/pet-web/src/Stylesheets/Rightdiv.module.css
@@ -51,7 +51,7 @@
 
 
 
-/* @keyframes outerCircleAnimation {
+@keyframes outerCircleAnimation {
     from{
         transform: rotate(0deg);
     }
@@ -70,4 +70,4 @@
         transform: rotate(360deg);
     }
 }
- */
+
