--- a/pet-web/src/Stylesheets/Box.module.css
+++ b/pet-web/src/Stylesheets/Box.module.css
@@ -1,12 +1,14 @@
-.container{
+.main{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .Box1{
     background-color: cyan;
-    width: 50%;
-    height: 200%;
+    width: 20rem;
+    height: 25rem;
     margin: 1rem 58px 1rem 5rem;
     border: 2px solid #5ed5d5;
     border-radius: 13px;
@@ -15,8 +17,8 @@
 
 .Box2{
     background-color: cyan;
-    width: 50%;
-    height: 100%;
+    width: 20rem;
+    height: 25rem;
     margin: 1rem 58px 1rem 5rem;
     border: 2px solid #5ed5d5;
     border-radius: 13px;
@@ -25,31 +27,38 @@
 
 .Box3{
     background-color: cyan;
-    width: 50%;
-    height: 100%;
+    width: 20rem;
+    height: 25rem;
     margin: 1rem 58px 1rem 5rem;
     border: 2px solid #5ed5d5;
     border-radius: 13px;
     display: flex;
-}
+} 
 
-/* .Emptybox{
-    margin: 6px;
-    margin-left: 2rem;
+.Emptybox{
+    margin-top: 1rem;
+    margin-left: 1.2rem;
     height: 18vh;
-    width: 15%;
+    width: 86%;
     background-color: black;
     border: 2px solid black;
     border-radius: 13px;
-} */
+}
 
-/* .h3{
-    margin: 1rem 0 0 3rem;
+.h3{
+    margin: -15rem 0 0 7rem;
     font-size: 25px;
-} */
+}
+
+.para{
+    margin-top: 1rem;
+    margin-left: 7rem;
+    width: 17rem;
+    color: black;
+}
 
 .mapContainer{
     height: 50%;
     width: 70%;
-    margin: 3rem 0 1rem 14rem;
+    margin: 15rem 0 1rem 14rem;
 }
