--- a/pet-web/src/Stylesheets/Quote.module.css
+++ b/pet-web/src/Stylesheets/Quote.module.css
@@ -13,6 +13,7 @@
     display: flex;  
     justify-content: center;
     align-items: center;
+    margin-top: 25rem 0 2rem 0;
     text-align: center;
     font-weight: 500;
     letter-spacing: 1px;
