--- a/pet-web/src/Stylesheets/Box.module.css
+++ b/pet-web/src/Stylesheets/Box.module.css
@@ -4,57 +4,10 @@
     align-items: center;
 }
 
-
-.Box1{
-    background-color: cyan;
-    width: 20rem;
-    height: 25rem;
-    margin: 1rem 58px 1rem 5rem;
-    border: 2px solid #5ed5d5;
-    border-radius: 13px;
+.Slider{
     display: flex;
-}
-
-.Box2{
-    background-color: cyan;
-    width: 20rem;
-    height: 25rem;
-    margin: 1rem 58px 1rem 5rem;
-    border: 2px solid #5ed5d5;
-    border-radius: 13px;
-    display: flex;
-}
-
-.Box3{
-    background-color: cyan;
-    width: 20rem;
-    height: 25rem;
-    margin: 1rem 58px 1rem 5rem;
-    border: 2px solid #5ed5d5;
-    border-radius: 13px;
-    display: flex;
-} 
-
-.Emptybox{
-    margin-top: 1rem;
-    margin-left: 1.2rem;
-    height: 18vh;
-    width: 86%;
-    background-color: black;
-    border: 2px solid black;
-    border-radius: 13px;
-}
-
-.h3{
-    margin: -15rem 0 0 7rem;
-    font-size: 25px;
-}
-
-.para{
-    margin-top: 1rem;
-    margin-left: 7rem;
-    width: 17rem;
-    color: black;
+    justify-content: center;
+    align-items: center;
 }
 
 .mapContainer{
