--- a/pet-web/src/Stylesheets/Box.module.css
+++ b/pet-web/src/Stylesheets/Box.module.css
@@ -15,3 +15,11 @@
     width: 70%;
     margin: 15rem 0 1rem 14rem;
 }
+
+.slideTitle {
+    color: black; /* Set the title color to black */
+  }
+
+.slideDescription{
+    background-color: black;
+}
