--- a/pet-web/src/Stylesheets/Rightdiv.module.css
+++ b/pet-web/src/Stylesheets/Rightdiv.module.css
@@ -11,14 +11,14 @@
     height: 80vh;
     width: 85vh;
     float: right;
-    margin: 2rem 2rem 0 2rem;
+    margin: 0 2rem 0 2rem;
 }
 
 .outerCircle {
     border: 2px solid white;
     border-radius: 50%; 
     height: 76vh; /* Set the same height as the container */
-    width: 75.5vh; /* Set the same width as the container */
+    width: 76vh; /* Set the same width as the container */
     background-color: cyan; 
     animation: outerCircleAnimation 12s linear infinite;
 }
@@ -27,9 +27,9 @@
     border: 2px solid cyan;
     background-color: var(--bgcolor);
     border-radius: 50%;
-    margin: 0.1rem 0.1rem 0.1rem 0.1rem; 
-    height: 75vh; /* Adjusted height to keep space for borders */
-    width: 75vh; /* Adjusted width to keep space for borders */
+    margin: 0.15rem; 
+    height: 74.5vh; /* Adjusted height to keep space for borders */
+    width: 74.5vh; /* Adjusted width to keep space for borders */
     animation: innerCircleAnimation 12s linear infinite;
 }
 
@@ -43,10 +43,10 @@
 
 .dog{
     float: right;
-    margin-left: 61rem;
+    margin-left: 49rem;
     z-index: 1;
     position: absolute;
-    height: 36rem;
+    height: 27rem;
 }
 
 
