--- a/pet-web/src/Stylesheets/Circleprop.module.css
+++ b/pet-web/src/Stylesheets/Circleprop.module.css
@@ -1,3 +1,8 @@
+:root {
+    --bgcolor: black;
+    --circle-diameter: 76vh;
+}
+
 .img1,
 .img2,
 .img3{
@@ -5,70 +10,50 @@
     z-index: 1;
 }
 
-.dog_img{
+
+.img1 img.dog_img {
     height: 100px;
     width: 100px;
-    margin-left: 52rem;
-    margin-top: 18rem;
-    animation: spin 12s var(--d, 0s) linear infinite;
-    transform: rotate(0) translate(60px) rotate(0); /* Adjust the translation as needed */
+    margin-top: 13rem;
+    margin-left: 55rem;
 }
-
-.cat_img{
-    height: 118px;
-    width: 104px;
-    margin-left: 52rem;
-    margin-top: 18rem;
-    /* animation: outerCircleAnimation 12s linear infinite; */
-}
-
-.rabbit_img{
-    height: 90px;
-    width: 70px;
-}
-
-.cat_img{
-    height: 20px;
-    width: 20px;
-}
-
-.rabbit_img{
-    height: 20px;
-    width: 20px;
-}
-
-/* Circleprop.module.css */
-
-.img1 img.dog_img{
-  height: 100px;
-  width: 100px;
-  margin-top: 13rem;
-  margin-left: 41rem;
-  
-}
-
 
 .img2 img.cat_img {
     height: 100px;
     width: 100px;
-    margin-top: 25rem;
-    margin-left: 62rem;
-    transform: rotate(7deg);
+    margin-top: 13rem;
+    margin-left: 55rem; /* Adjusted margin-left value */
 }
 
 .img3 img.rabbit_img {
     height: 100px;
     width: 100px;
-    margin-top: 5.5rem;
-    margin-left: 66rem;
+    margin-top: 13rem;
+    margin-left: 55rem; /* Adjusted margin-left value */
 }
 
 
-@keyframes spin {
-    0% {
-        transform: rotate(0turn) translate(60px) rotate(0turn);
+.dog_img{
+    position: absolute;
+    z-index: 1;
+    animation: rotateAroundCircle 12s linear infinite 0s;
+}
+
+.cat_img{
+    animation: rotateAroundCircle 12s linear infinite 4s;
+}
+
+.rabbit_img {
+    position: absolute;
+    z-index: 1;
+    animation: rotateAroundCircle 12s linear infinite 8s;
+}
+
+@keyframes rotateAroundCircle {
+    from {
+        transform: rotate(0deg) translate(calc(var(--circle-diameter)/2)) rotate(0deg);
     }
-    100% {
-        transform: rotate(1turn) translate(60px) rotate(-1turn);
+    to {
+        transform: rotate(360deg) translate(calc(var(--circle-diameter)/2)) rotate(-360deg);
     }
 }
