--- a/pet-web/src/Stylesheets/Abouts.module.css
+++ b/pet-web/src/Stylesheets/Abouts.module.css
@@ -1,3 +1,15 @@
+.aboutCont{
+    background-color: #212020;
+    height: 20%;
+    width: 90%;
+    margin:2rem 0 2rem 4rem ;
+    border-radius: 1rem;
+    border: 8px solid #333;
+    border-bottom: 5px;
+    border-right: 5px;
+}
+
+
 
 .head {
     margin: 0;
@@ -7,9 +19,9 @@
     padding: 10px;
   }
 
-h1 {
+h3 {
     color: white;
-    margin-left: 5%;
+    margin: 2rem 0 1rem 7%;
   }
 
 h2{
@@ -22,6 +34,19 @@ p{
     margin: 0 5rem 1rem 5rem; /* Adjust the bottom margin as needed */
     
 }
+
+li{
+    margin: 0.5rem 0 0.5rem 3rem;
+}
+
+.infoPara{
+    margin-top: 3rem;
+}
+
+.strong{
+    margin-top: 3rem;
+}
+
 #whatWeDo {
     height: 140vh;
     width: 100%;
@@ -90,7 +115,7 @@ p{
 }
 .cards>div:hover{
     transform: scale(1.1);
-    filter: drop-shadow(0 0 20px rgba(6, 255, 255, 1));
+    filter: drop-shadow(0 0 20px rgb(0, 255, 76));
 }
 .card > .icon{
     height: 37%;
