--- a/pet-web/src/Stylesheets/Circleprop.module.css
+++ b/pet-web/src/Stylesheets/Circleprop.module.css
@@ -14,22 +14,22 @@
 .img1 img.dog_img {
     height: 100px;
     width: 100px;
-    margin-top: 13rem;
-    margin-left: 55rem;
+    margin-top: 16rem;
+    margin-left: 71rem;
 }
 
 .img2 img.cat_img {
     height: 100px;
     width: 100px;
-    margin-top: 13rem;
-    margin-left: 55rem; /* Adjusted margin-left value */
+    margin-top: 16rem;
+    margin-left: 71rem; /* Adjusted margin-left value */
 }
 
 .img3 img.rabbit_img {
     height: 100px;
     width: 100px;
-    margin-top: 13rem;
-    margin-left: 55rem; /* Adjusted margin-left value */
+    margin-top: 16rem;
+    margin-left: 71rem; /* Adjusted margin-left value */
 }
 
 
@@ -40,6 +40,8 @@
 }
 
 .cat_img{
+    position: absolute;
+    z-index: 1;
     animation: rotateAroundCircle 12s linear infinite 4s;
 }
 
