--- a/pet-web/src/Stylesheets/Navbar.module.css
+++ b/pet-web/src/Stylesheets/Navbar.module.css
@@ -33,7 +33,6 @@ header {
   height: 80%;
   aspect-ratio: 1;
   border-radius: 4vh;
-  animation: breathing 3s ease-out infinite;
 }
 
 nav {
@@ -57,6 +56,7 @@ nav ul li {
   font-family: "Changa", sans-serif;
   display: flex;
   font-weight: bolder;
+  font-size: large;
 }
 
 nav ul li a {
